<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignInFragment">

    <View
        android:id="@+id/rectangle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/rectangle" />

    <View
        android:id="@+id/ellipse"
        android:layout_width="199dp"
        android:layout_height="199dp"
        android:layout_marginStart="245dp"
        android:layout_marginTop="-40dp"
        android:background="@drawable/eclipse"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp">

        <View
            android:id="@+id/vector"
            android:layout_width="56dp"
            android:layout_height="43dp"
            android:background="@drawable/logo_consult"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/consult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/consult"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Theme.ConsultPlus"
            android:textSize="27sp"
            android:fontFamily="@font/oswald_semibold"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="60sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/register_wi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:layout_gravity="center"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            />


        <View

            android:layout_width="200dp"
            android:layout_height="150dp"
            android:background="@drawable/undraw_login_screen"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="300sp"
            android:layout_height="50dp"
            android:background="@drawable/input_background"
            android:textColorHint="@color/hint_text"

            android:hint="Enter your email"
            android:layout_gravity="center"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto_regular"
            android:textSize="10sp"
            android:paddingLeft="32sp"
            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            />



        <EditText
            android:id="@+id/etPassword"
            android:layout_width="300sp"
            android:layout_height="50dp"
            android:background="@drawable/input_background"
            android:textColorHint="@color/hint_text"

            android:hint="Enter your password"
            android:layout_gravity="center"
            android:inputType="textPassword"
            android:fontFamily="@font/roboto_regular"
            android:textSize="10sp"
            android:paddingLeft="32sp"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30sp"
            />
        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|top"
            android:text="@string/forgot_password"
            android:textColor="@color/light_blue"
            android:textSize="15sp"
            android:fontFamily="@font/roboto_regular"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40sp"
            />


        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_rectangle"
            android:layout_gravity="center"

            android:text="Sign In"
            android:fontFamily="@font/poppins_bold"
            android:textSize="12sp"
            />

        <LinearLayout
            android:layout_marginTop="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Don't have an account ?  "
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                android:textSize="13sp"

                />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up"
                android:textStyle="bold"
                android:fontFamily="@font/roboto_regular"
                android:textSize="13sp"

                />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>