<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".view.ui.fragment.HomeFragment"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top"

        >

        <androidx.cardview.widget.CardView


            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <View
                android:id="@+id/ellipse"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:background="@drawable/eclipse_2"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                app:cardCornerRadius="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center|end"
                android:layout_marginTop="-5dp"
                android:layout_marginEnd="23dp"
                android:elevation="30dp">
                <ImageView
                    android:id="@+id/img_profil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />





            </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>


    </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10sp"
            android:layout_gravity="center|top"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hello_"
                android:textColor="#000000"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_regular"
                />
            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textColor="#000000"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_bold"
                />



        </LinearLayout>

        <AutoCompleteTextView
            android:layout_gravity="center|top"
            android:layout_marginTop="110dp"
            android:id="@+id/searshbar"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:background="@drawable/searsh_bar"
            android:paddingStart="15sp"
            android:paddingEnd="15sp"
            android:elevation="10dp"
            android:drawablePadding="15dp"
            android:drawableStart="@drawable/searsh_icon"
            android:hint="@string/search_by_doctors_or_diseases"/>


        <LinearLayout
            android:layout_marginTop="170dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start"



            >

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"

            >
            <TextView

                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="@string/most_popular"
                android:textColor="#000000"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins_bold"
                />

            <View
                android:id="@+id/full_popular"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@drawable/open_in_full"
                />
        </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:id="@+id/boxRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:listitem="@layout/most_popular_layout"
                tools:orientation="horizontal"
                android:scrollbars="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mm"
            android:layout_marginTop="390dp"
            android:layout_width="match_parent"
            android:layout_gravity="center|top"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"

                >
                <TextView
                    android:id="@+id/test_title"
                    android:layout_width="340dp"
                    android:layout_height="wrap_content"
                    android:text="@string/your_test_results"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:fontFamily="@font/poppins_bold"
                    />

                <View
                    android:id="@+id/full_popular_2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/open_in_full"
                    />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/testRecyclerView"
                android:layout_width="wrap_content"
                android:layout_height="170dp"
                android:layout_gravity="center_horizontal"
                tools:listitem="@layout/test_layout"
                android:clickable="true"
                android:focusable="true"
 />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"

                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20sp"
                    android:elevation="30dp"
                app:cardCornerRadius="30sp"
                android:background="@drawable/searsh_bar">

                <LinearLayout
                    android:layout_margin="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Instant Appointment"
                            android:textColor="#000000"

                            android:textSize="15sp"
                            android:fontFamily="@font/poppins_bold"
                            />


                        <TextView
                            android:layout_width="160dp"
                            android:layout_height="wrap_content"
                            android:text="Lorem ipsum dolor sit amet, consectetur.
"
                            android:textColor="#000000"

                            android:textSize="15sp"
                            android:fontFamily="@font/roboto_regular"
                            />

                        <Button
                            android:layout_marginTop="10sp"
                            android:id="@+id/button"
                            android:layout_width="105dp"
                            android:layout_height="32sp"
                            android:background="@drawable/bt_rectangle"
                            android:layout_gravity="center_horizontal"
                            android:textSize="8sp"
                            android:text="Learn more"
                            android:fontFamily="@font/roboto_regular"

                            />







                    </LinearLayout>



                    <View
                        android:layout_width="130dp"
                        android:layout_height="92dp"
                        android:layout_gravity="center"
                        android:background="@drawable/undraw_medicine"
                        />


                </LinearLayout>





            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </FrameLayout>


</ScrollView>